--- a/static/light-variables.css
+++ b/static/light-variables.css
@@ -1,10 +1,13 @@
 /* Light Mode */
 :root {
     --accent-color: #8e24aa;
+    --active-tab-color: #8e24aa07;
     --accent-color-transparent: #1e88e520;
+    --scrollbar-thumb-color: #afafaf50; 
+    --scrollbar-background: #cecece50; 
     --borderRadius: 20px;
     --page-color: #000;
-    --object-background: #fff;
+    --object-background: #fefefe;
     --page-background: #fff;
     --footer-background: #8e24aa;
     --button-text-color: #fff;
